# MoscowCityHack22

./: .gitignore  README.md  pyproject.toml  skolkovo_prom_orn_good.csv
backend/: postgres.py
moscowhack/backend/: README.md  main.py  postgres.py
moscowhack/frontend/: package-lock.json
moscowhack/frontend/public/: index.html
moscowhack/frontend/src/: App.vue
moscowhack/frontend/src/components/: CompanyProfile.vue  NotFound.vue  ProductsProfile.vue
moscowhack/frontend/src/router/: index.js
moscowhack/parser/: README.MD
moscowhack/parser/src/: items.py  pipelines.py  settings.py
moscowhack/parser/src/spiders/: skolkovo_spider.py  technomoscow_spider.py
notebooks/: Analytics_data_merge.ipynb  MSC22_table_clean_merge.ipynb  Moscow_products_get_analytics.ipynb  RuBertEmbeddings.ipynb  Skolkovo Get Orn Good.ipynb
parser/: scrapy.cfg
parser/src/: middlewares.py  postgres.py  settings.py
parser/src/spiders/: skolkovo_spider.py  technomoscow_spider.py
